hphp/hack/test/typecheck/variadic_args9.php.exp
File "variadic_args9.php", line 8, characters 19-22:
Member meth has the wrong type (Typing[4341])
File "variadic_args9.php", line 8, characters 31-35:
Expected int (variadic argument)
File "variadic_args9.php", line 4, characters 34-38:
But got string (variadic argument)
